// $Id: CHANGELOG.txt,v 1.170 2006-11-17 00:44:12 unconed Exp $

Drupal 5.0, xxxx-xx-xx (development version)
------------------------
- completely retooled the administration page
    * /admin now contains an administration page which may be themed
    * reorganised administration menu items by task and by module
    * added a status report page with detailed PHP/MySQL information
- added web-based installer which can:
    * check installation requirements
    * automatically generate the database configuration file
    * install pre-made 'install profiles' or distributions
    * import the database structure with automatic table prefixing
    * be localized
- added new default Garland theme
- added color module to change some themes' color schemes
- included the jQuery JavaScript library 1.0.3 and converted all core JavaScript to use it
- introduced the ability to alter mail sent from system
- module system:
    * added .info files for module meta-data
    * added support for module dependencies
    * improved module installation screen
    * moved core modules to their own directories
    * added support for module uninstalling
- added support for different cache backends
- added support for a generic "sites/all" directory.
- usability:
    * added support for auto-complete forms (AJAX) to user profiles.
    * made it possible to instantly assign roles to newly created user accounts.
    * improved configurability of the contact forms.
    * reorganized the settings pages.
    * made it easy to investigate popular search terms
- integrated urlfilter.module in filter.module
- block system:
    * extended the block visibility settings with a role specific settings.
    * made it possible to customize all block titles.
- poll module:
    * optionally allow people to inspect all votes.
    * optionally allow people to cancel their vote.
- distributed authentication:
    * added default server option.
- added default robots.txt to control crawlers.
- database API: