@@ -1,5 +1,5 @@
 <?php
-// $Id: comment.module,v 1.496 2006-11-12 00:11:15 drumm Exp $
+// $Id: comment.module,v 1.497 2006-11-21 08:16:39 unconed Exp $
 
 /**
  * @file
@@ -1044,7 +1044,7 @@ function comment_admin_overview($type = 'new', $arg) {
   // load the comments that we want to display
   $status = ($type == 'approval') ? COMMENT_NOT_PUBLISHED : COMMENT_PUBLISHED;
   $form['header'] = array('#type' => 'value', '#value' => array(
-    NULL,
+    theme('table_select_header_cell'),
     array('data' => t('Subject'), 'field' => 'subject'),
     array('data' => t('Author'), 'field' => 'name'),
     array('data' => t('Time'), 'field' => 'timestamp', 'sort' => 'desc'),
